# vocal-analytics-service

./: .env.example  .gitignore  CODEOWNERS  README.md  SYSTEM_DESIGN.md  app.py  pyproject.toml  requirements.txt  setup.sh
results/2026-03-28/gpt-4o-mini/: poc-aa7bd59e-20260328_120904.json
results/2026-03-28/mock-model/: poc-6803d6bd-20260328_120915.json  poc-cf1a2a7b-20260328_113222.json  poc-d0fb3fcb-20260328_121150.json
samples/: sample_transcript.txt  sample_transcript_multi.txt  sample_transcript_short.txt
services/analysis/: analyzer.py  config.py  main.py  prompts.py  schemas.py  transcriber.py  validators.py
services/analysis/llm/: __init__.py  base.py  ollama_client.py  openai_client.py
tests/: test_analyze_endpoint.py  test_analyzer.py  test_schemas.py  test_validators.py
tests/fixtures/: golden_analysis.json
